k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genai-frontend
  namespace: genai-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genai-frontend
  template:
    metadata:
      labels:
        app: genai-frontend
    spec:
      containers:
        - name: frontend
          image: capstone-agentic-rag-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: genai-assistant
spec:
  type: NodePort
  selector:
    app: genai-frontend
  ports:
    - port: 8501
      targetPort: 8501
      nodePort: 30501
